[gd_scene load_steps=11 format=3 uid="uid://d1xcm87cu8iqg"]

[ext_resource type="Script" path="res://Scenes/UIComponents/cauldron.gd" id="1_p8vgq"]

[sub_resource type="InputEventKey" id="InputEventKey_qwwvf"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_fhup3"]
events = [SubResource("InputEventKey_qwwvf")]

[sub_resource type="GDScript" id="GDScript_4534o"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.%RemoveHumans


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="InputEventKey" id="InputEventKey_v0h33"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_i3h3m"]
events = [SubResource("InputEventKey_v0h33")]

[sub_resource type="GDScript" id="GDScript_p4ep3"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="InputEventKey" id="InputEventKey_6yhii"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_pm1o4"]
events = [SubResource("InputEventKey_6yhii")]

[sub_resource type="GDScript" id="GDScript_y8pj5"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="Cauldron" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8vgq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.658
anchor_top = 0.158
anchor_right = 1.0
anchor_bottom = 0.75
offset_left = -0.240051
offset_top = 0.239998
offset_right = 4.0
offset_bottom = 29.9999
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="RemoveHumans" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../RemoveProsperity")
focus_neighbor_bottom = NodePath("../RemoveWater")
shortcut = SubResource("Shortcut_fhup3")
text = "Erase Humans"
script = SubResource("GDScript_4534o")

[node name="RemoveWater" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../RemoveHumans")
focus_neighbor_bottom = NodePath("../RemoveProsperity")
shortcut = SubResource("Shortcut_i3h3m")
text = "Erase Water"
script = SubResource("GDScript_p4ep3")

[node name="RemoveProsperity" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../RemoveWater")
focus_neighbor_bottom = NodePath("../RemoveHumans")
shortcut = SubResource("Shortcut_pm1o4")
text = "Erase Prosperity"
script = SubResource("GDScript_y8pj5")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/RemoveHumans" to="." method="_on_remove_humans_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/RemoveWater" to="." method="_on_remove_water_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/RemoveProsperity" to="." method="_on_remove_prosperity_pressed"]
